// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contextMenu element > right-clicking on a group should select whole group > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": false,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": true,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": false,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > right-clicking on a group should select whole group > [end of test] element 0 1`] = `
{
  "angle": 0,
  "backgroundColor": "red",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [
    "g1",
  ],
  "height": 100,
  "id": "id0",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": 1,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 2,
  "versionNonce": 1278240551,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`contextMenu element > right-clicking on a group should select whole group > [end of test] element 1 1`] = `
{
  "angle": 0,
  "backgroundColor": "red",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [
    "g1",
  ],
  "height": 100,
  "id": "id1",
  "index": "a1",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": 1,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 2,
  "versionNonce": 449462985,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`contextMenu element > right-clicking on a group should select whole group > [end of test] number of elements 1`] = `2`;

exports[`contextMenu element > right-clicking on a group should select whole group > [end of test] number of renders 1`] = `4`;

exports[`contextMenu element > right-clicking on a group should select whole group > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > right-clicking on a group should select whole group > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Add to library' in context menu adds element to library > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Add to library' in context menu adds element to library > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Add to library' in context menu adds element to library > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Add to library' in context menu adds element to library > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Add to library' in context menu adds element to library > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Bring forward' in context menu brings element forward > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Bring forward' in context menu brings element forward > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Bring forward' in context menu brings element forward > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Bring forward' in context menu brings element forward > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Bring forward' in context menu brings element forward > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Bring to front' in context menu brings element to front > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Bring to front' in context menu brings element to front > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Bring to front' in context menu brings element to front > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Bring to front' in context menu brings element to front > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Bring to front' in context menu brings element to front > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Copy styles' in context menu copies styles > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Copy styles' in context menu copies styles > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Copy styles' in context menu copies styles > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Copy styles' in context menu copies styles > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Copy styles' in context menu copies styles > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Delete' in context menu deletes element > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Delete' in context menu deletes element > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Delete' in context menu deletes element > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Delete' in context menu deletes element > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Delete' in context menu deletes element > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Duplicate' in context menu duplicates element > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Duplicate' in context menu duplicates element > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Duplicate' in context menu duplicates element > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Duplicate' in context menu duplicates element > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Duplicate' in context menu duplicates element > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Group selection' in context menu groups selected elements > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Group selection' in context menu groups selected elements > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Group selection' in context menu groups selected elements > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Group selection' in context menu groups selected elements > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Group selection' in context menu groups selected elements > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Paste styles' in context menu pastes styles > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Paste styles' in context menu pastes styles > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Paste styles' in context menu pastes styles > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Paste styles' in context menu pastes styles > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Paste styles' in context menu pastes styles > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Send backward' in context menu sends element backward > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Send backward' in context menu sends element backward > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Send backward' in context menu sends element backward > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Send backward' in context menu sends element backward > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Send backward' in context menu sends element backward > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Send to back' in context menu sends element to back > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Send to back' in context menu sends element to back > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Send to back' in context menu sends element to back > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Send to back' in context menu sends element to back > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Send to back' in context menu sends element to back > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Ungroup selection' in context menu ungroups selected group > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > selecting 'Ungroup selection' in context menu ungroups selected group > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > selecting 'Ungroup selection' in context menu ungroups selected group > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > selecting 'Ungroup selection' in context menu ungroups selected group > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > selecting 'Ungroup selection' in context menu ungroups selected group > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > shows 'Group selection' in context menu for multiple selected elements > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > shows 'Group selection' in context menu for multiple selected elements > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > shows 'Group selection' in context menu for multiple selected elements > [end of test] number of renders 1`] = `2`;

exports[`contextMenu element > shows 'Group selection' in context menu for multiple selected elements > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > shows 'Group selection' in context menu for multiple selected elements > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > shows 'Ungroup selection' in context menu for group inside selected elements > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > shows 'Ungroup selection' in context menu for group inside selected elements > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > shows 'Ungroup selection' in context menu for group inside selected elements > [end of test] number of renders 1`] = `3`;

exports[`contextMenu element > shows 'Ungroup selection' in context menu for group inside selected elements > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > shows 'Ungroup selection' in context menu for group inside selected elements > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > shows context menu for canvas > [end of test] appState 1`] = `undefined`;

exports[`contextMenu element > shows context menu for canvas > [end of test] number of renders 1`] = `0`;

exports[`contextMenu element > shows context menu for element > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": true,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": false,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > shows context menu for element > [end of test] appState 2`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "bindingPreference": "enabled",
  "boxSelectionMode": "contain",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeVariability": "constant",
  "currentItemStrokeWidthKey": "medium",
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 100,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": false,
  "isMidpointSnappingEnabled": true,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 20,
  "offsetTop": 10,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": {
    "x": 0,
    "y": 0,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": true,
    "type": "selection",
  },
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollConstraints": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {
    "id0": true,
  },
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": false,
  "snapLines": [],
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 200,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`contextMenu element > shows context menu for element > [end of test] element 0 1`] = `
{
  "angle": 0,
  "backgroundColor": "red",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 200,
  "id": "id0",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": 1,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 2,
  "versionNonce": 1278240551,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`contextMenu element > shows context menu for element > [end of test] element 1 1`] = `
{
  "angle": 0,
  "backgroundColor": "red",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 200,
  "id": "id1",
  "index": "a1",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": 1,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 2,
  "versionNonce": 449462985,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`contextMenu element > shows context menu for element > [end of test] number of elements 1`] = `0`;

exports[`contextMenu element > shows context menu for element > [end of test] number of elements 2`] = `2`;

exports[`contextMenu element > shows context menu for element > [end of test] number of renders 1`] = `2`;

exports[`contextMenu element > shows context menu for element > [end of test] number of renders 2`] = `5`;

exports[`contextMenu element > shows context menu for element > [end of test] redo stack 1`] = `[]`;

exports[`contextMenu element > shows context menu for element > [end of test] redo stack 2`] = `[]`;

exports[`contextMenu element > shows context menu for element > [end of test] undo stack 1`] = `[]`;

exports[`contextMenu element > shows context menu for element > [end of test] undo stack 2`] = `[]`;
